Adds /unhealthy and background colour from env var

--- a/colour-service/static/templates/index.html
+++ b/colour-service/static/templates/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Pod Info</title>
     </head>
-    <body>
+    <body class="_{{me.new_colour}}">
         <div class="jumbo" style="background-color:{{me.colour_rgb}};">
             <h3>Hello, I am a Pod!</h3>
             <p>For those without a colour TV, my colour is <span style="background-color:{{me.colour_rgb}};">{{me.colour_rgb}}</span></p>
@@ -39,7 +39,6 @@
             </div>
         </div>
         {{/if}}
-
 
     </body>
 </html>
